# swallow-evaluation-instruct

./: .env_template  .gitignore  ACKNOWLEDGMENTS.md  BENCHMARKS.md  CONTRIBUTORS.md  HOWTOUSE.md  LICENSE  README.md  README_t4.md  README_t4_a3_lcl.md  TIPS.md  pyproject.toml
lighteval/: Pipfile  pyproject.toml
lighteval/src/lighteval/: main_endpoint.py  main_vllm.py  pipeline.py
lighteval/src/lighteval/logging/: evaluation_tracker.py
lighteval/src/lighteval/metrics/: llm_as_judge.py  metrics_corpus.py  metrics_sample.py
lighteval/src/lighteval/models/: litellm_model.py  model_input.py  model_output.py  utils.py
lighteval/src/lighteval/tasks/: default_prompts.py  lighteval_task.py  prompt_manager.py  registry.py  requests.py
lighteval/src/lighteval/utils/: utils.py
lighteval/tests/: test_unit_harness_metrics.py  test_unit_harness_prompts.py
lighteval/tests/models/: test_custom_reasoning_parser.py
lighteval/tests/resources/: ja_input_data.jsonl  ja_input_response_data_google__gemma-3-12b-it.jsonl  ja_input_response_data_gpt-4o-2024-08-06.jsonl
lighteval/tests/resources/ja_input_response_data_google__gemma-3-12b-it/: eval_results_loose.jsonl  eval_results_strict.jsonl
lighteval/tests/resources/ja_input_response_data_gpt-4o-2024-08-06/: eval_results_loose.jsonl  eval_results_strict.jsonl
lighteval/tests/tasks/: test_mifeval_ja_metric.py
resources/: chat_template_base_model.jinja
scripts/: aggregate_results.py  aggregate_results.sh  config.yaml  debug_en_CUSTOM.sh  debug_en_LiveCodeBench.sh  debug_en_MMLU.sh  debug_ja_M-IFEval.sh  debug_ja_MMLU-ProX.sh  debug_litellm_DeepInfra.sh  evaluate_LiveCodeBench_batch.sh  evaluate_LiveCodeBench_batch_with_DeepInfra.sh  evaluate_WMT20.sh  evaluate_WMT20_batch.sh  evaluate_en_HellaSwag.sh  evaluate_en_MATH-500.sh  evaluate_en_MMLU-ProX.sh  evaluate_en_gpqa.sh  evaluate_en_mtbench.sh  evaluate_ja_JEMHopQA.sh  evaluate_ja_JEMHopQA_batch.sh  evaluate_ja_M-IFEval_batch.sh  evaluate_ja_MATH-100-Japanese.sh  evaluate_ja_MMLU-ProX.sh  evaluate_ja_gpqa.sh  evaluate_ja_gpqa_litellm.sh  evaluate_ja_mtbench.sh  evaluate_ja_mtbench_vllm.sh  lighteval2vllm.sh  setup_env.sh  user_config.sh  utils.sh  vllmserve2lighteval.sh  vllmserve2lighteval_useconfig.sh
scripts/aggregate_utils/: conf.py  funcs.py  white_lists.py
scripts/examples/: 1_litellm.sh  2_1_vllm2litellm_non_reasoning.sh  2_1_vllm2litellm_reasoning.sh  2_2_lighteval2vllm.sh  2_2_vllm2litellm_non_reasoning.sh  2_3_vllmserve2lighteval_useconfig.sh  3_config.yaml  3_lighteval2vllm.sh  3_vllmserve2lighteval_useconfig.sh  tips_3_vllmserve2lighteval_useconfig.sh  tips_config.yaml  tips_vllmserve2lighteval_useconfig.sh  utils.sh
scripts/generation_settings/: check_metadata.py  setting_manager.py  task_settings.csv
scripts/generation_settings/custom_model_settings/: template.yaml
scripts/generation_settings/custom_model_settings/cyberagent/: DeepSeek-R1-Distill-Qwen-14B-Japanese.yaml
scripts/generation_settings/custom_model_settings/deepseek-ai/: DeepSeek-R1-Distill-Llama-70B.yaml  DeepSeek-R1-Distill-Llama-8B.yaml
scripts/generation_settings/custom_model_settings/nvidia/: Llama-3_3-Nemotron-Super-49B-v1.yaml
scripts/generation_settings/custom_model_settings/openai/: o3-mini-2025-01-31.yaml
scripts/generation_settings/custom_model_settings/sbintuitions/: sarashina2.2-1b-instruct-v0.1.yaml
scripts/qsub/: common_funcs.sh  evaluate_lighteval.sh  qsub_all.sh
scripts/qsub/conf/: load_config.sh  tasks_runtime.csv
scripts/qsub/environment/: setup_t4_uv_envs.sh
scripts/qsub/utils/: extract_runtime.py  qsub_test.sh  runtime.sh  save_and_check_qstat.sh
scripts/qsub/utils/abci/: qstat.py  runtime.sh
scripts/tsubame/: common_funcs.sh  evaluate_ja_humaneval.sh  evaluate_ja_jmmlu.sh  evaluate_lighteval.sh  qsub_all.sh  qsub_all_node_q.sh  utils.sh
scripts/tsubame/conf/: load_config.py  load_config.sh  tasks_runtime.csv
scripts/tsubame/environment/: setup_t4_uv_envs.sh
scripts/tsubame/utils/: qstat_history.out  qsub_test.sh  save_and_check_qstat.sh
scripts/utils/: calc_mifeval_ja_acc.py  details_viewer.ipynb  provider_request_test.ipynb
(+38 files in other folders)
